@@ -1,3 +1,0 @@
-distribution: Ubuntu
-version: 3.0
- venv: /tmp/venv
