@@ -1,0 +1,24 @@
+[system]
+distribution=Ubuntu
+release=trusty
+python_path=/usr/bin/python
+
+[install]
+requirements_file=https://raw.githubusercontent.com/cloudify-cosmo/cloudify-agent/master/dev-requirements.txt
+# cloudify_agent_version=3.1
+cloudify_agent_module=https://github.com/cloudify-cosmo/cloudify-agent/archive/master.tar.gz
+
+[additional_modules]
+# this section contains items of just a key, without a value; the key is
+# a package name to be installed
+
+[additional_plugins]
+# this section contains items of "plugin_name: pip-installable-link"
+
+[output]
+tar=Ubuntu-trusty-agent.tar.gz
+keep_virtualenv=true
+# those are also defaulted from envvars
+version=
+milestone=
+build=
