@@ -1,10 +1,0 @@
-distribution: Ubuntu
-release: trusty
-python_path: '/usr/bin/python'
-requirements_file: https://raw.githubusercontent.com/cloudify-cosmo/cloudify-agent/master/dev-requirements.txt
-# cloudify_agent_version: 3.1
-cloudify_agent_module: https://github.com/cloudify-cosmo/cloudify-agent/archive/master.tar.gz
-additional_modules: []
-additional_plugins: {}
-output_tar: Ubuntu-trusty-agent.tar.gz
-keep_virtualenv: true
