@@ -28,7 +28,6 @@ setup(
     },
     install_requires=[
         "docopt==.0.6.1",
-        "pyyaml==3.10",
         "virtualenv==15.1.0",
         "requests==2.7.0",
     ],
